tests/compiler/function_arguments_mismatch.kk.out
error: Function arguments length mismatch
 --> tests/compiler/function_arguments_mismatch.kk:1:5
  |
...
3 |     \(x, y) => 1
  |     ^^^^^^^^^^^^
  |

Expected 1 argument, but this function has 2 arguments
